# AI_Process

./: .env.sample  README.md  pyproject.toml  Діаграма без назви.drawio
src/: main.py
src/core/part_a/: consts.py  models.py  prompt_construct.py  task_1.py
src/core/part_b/: task_2.py
src/core/prompts/: assistant_1  assistant_2  knowledge_base
