[tool.poetry]
name = "ai-process"
version = "0.1.0"
description = ""
authors = ["mborodada <mboroda@lytvynov-production.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
loguru = "^0.7.3"
python-dotenv = "^1.0.1"
scikit-learn = "^1.6.1"
openai = "^1.60.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
